--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,6 @@
 /deeplearning/datasets
 /deeplearning/chroma_db
 /deeplearning/models
+/deeplearning/RAG/여비산정기준표
+/deeplearning/RAG/chroma_db
+/deeplearning/RAG/여비산정기준표
