--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,4 @@
 /deeplearning/facial-keypoints-results
 deeplearning/facial-keypoints-detection.zip
 deeplearning/face_model/model.safetensors
+/코딩 테스트/data
